<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="CAST.IO Service"
      android:key="castio_service">


    <EditTextPreference
        android:key="service_address"
	android:title="@string/pref_service_address_title"
        android:summary="@string/pref_service_address_summary"
        />

    <EditTextPreference
        android:key="service_username"
        android:title="@string/pref_service_username_title"
        android:summary="@string/pref_service_username_summary"
        />

    <EditTextPreference
        android:key="service_password"
        android:title="@string/pref_service_password_title"
        android:summary="@string/pref_service_password_summary"
	android:inputType="textPassword"
        />

  </PreferenceCategory>
</PreferenceScreen>
